--- a/app/src/main/res/layout/second_question_fragment.xml
+++ b/app/src/main/res/layout/second_question_fragment.xml
@@ -29,7 +29,8 @@
     android:layout_below="@+id/fullHouse"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:layout_marginTop="27dp">
+    android:layout_marginTop="27dp"
+    android:id="@+id/radioGroup">
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,7 +43,7 @@
         android:checked="false"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#010000"
-        android:onClick= "onRadioButtonClicked"
+
         />
 
     <RadioButton
@@ -80,6 +81,17 @@
         android:layout_centerVertical="true"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 </RadioGroup>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:id="@+id/finishButton"
+        android:layout_marginTop="58dp"
+        android:layout_below="@+id/radioGroup"
+        android:layout_centerHorizontal="true"
+        android:background="#8fb0e6"
+      />
 
 
 </RelativeLayout>
