--- a/app/src/main/res/layout/First_Question_Fragment.xml
+++ b/app/src/main/res/layout/First_Question_Fragment.xml
@@ -50,7 +50,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberSigned"
+        android:inputType="number"
         android:ems="10"
         android:id="@+id/first_question_answer"
         android:layout_marginTop="19dp"
